{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 55,
  "lineage": "0c5c6fc7-61d8-726b-4279-33512111ebc8",
  "resources": [
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "test_eip",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4eda239037b0a2e",
            "arn": "arn:aws:ec2:us-east-1:992382822158:elastic-ip/eipalloc-0e4eda239037b0a2e",
            "domain": "vpc",
            "id": "eipalloc-0e4eda239037b0a2e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-237-31-242.compute-1.amazonaws.com",
            "public_ip": "54.237.31.242",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mukesh-eip"
            },
            "tags_all": {
              "Name": "mukesh-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_igw",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:internet-gateway/igw-0aedba428a7a5ee3a",
            "id": "igw-0aedba428a7a5ee3a",
            "owner_id": "992382822158",
            "tags": {
              "Name": "mukesh-igw"
            },
            "tags_all": {
              "Name": "mukesh-igw"
            },
            "vpc_id": "vpc-0563a4c24ccac595a"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test_nat_gateway",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4eda239037b0a2e",
            "association_id": "eipassoc-0b1f399b09156ade4",
            "connectivity_type": "public",
            "id": "nat-07c017ba349a90a39",
            "network_interface_id": "eni-0b3e4c2fa82278145",
            "private_ip": "10.0.0.6",
            "public_ip": "54.237.31.242",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-077c4ba84fbec1442",
            "tags": {
              "Name": "mukesh-nat-gateway"
            },
            "tags_all": {
              "Name": "mukesh-nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc_module.aws_eip.test_eip",
            "module.vpc_module.aws_internet_gateway.test_igw",
            "module.vpc_module.aws_subnet.public_subnet_test",
            "module.vpc_module.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:route-table/rtb-097922044142fb00c",
            "id": "rtb-097922044142fb00c",
            "owner_id": "992382822158",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07c017ba349a90a39",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mukesh-private-rt"
            },
            "tags_all": {
              "Name": "mukesh-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0563a4c24ccac595a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_eip.test_eip",
            "module.vpc_module.aws_internet_gateway.test_igw",
            "module.vpc_module.aws_nat_gateway.test_nat_gateway",
            "module.vpc_module.aws_subnet.public_subnet_test",
            "module.vpc_module.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:route-table/rtb-0d128d7932da2f0f7",
            "id": "rtb-0d128d7932da2f0f7",
            "owner_id": "992382822158",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aedba428a7a5ee3a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mukesh-public-rt"
            },
            "tags_all": {
              "Name": "mukesh-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0563a4c24ccac595a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.test_igw",
            "module.vpc_module.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03061908dd0e8a1ba",
            "route_table_id": "rtb-097922044142fb00c",
            "subnet_id": "subnet-0b83a30922d05108a"
          },
          "dependencies": [
            "module.vpc_module.aws_eip.test_eip",
            "module.vpc_module.aws_internet_gateway.test_igw",
            "module.vpc_module.aws_nat_gateway.test_nat_gateway",
            "module.vpc_module.aws_route_table.private_rt",
            "module.vpc_module.aws_subnet.private_subnet_test",
            "module.vpc_module.aws_subnet.public_subnet_test",
            "module.vpc_module.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01937eb51d2173a67",
            "route_table_id": "rtb-0d128d7932da2f0f7",
            "subnet_id": "subnet-077c4ba84fbec1442"
          },
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.test_igw",
            "module.vpc_module.aws_route_table.public_rt",
            "module.vpc_module.aws_subnet.public_subnet_test",
            "module.vpc_module.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_test",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:subnet/subnet-0b83a30922d05108a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b83a30922d05108a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382822158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mukesh-private-subnet"
            },
            "tags_all": {
              "Name": "mukesh-private-subnet"
            },
            "vpc_id": "vpc-0563a4c24ccac595a"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_test",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:subnet/subnet-077c4ba84fbec1442",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077c4ba84fbec1442",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382822158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mukesh-public-subnet"
            },
            "tags_all": {
              "Name": "mukesh-public-subnet"
            },
            "vpc_id": "vpc-0563a4c24ccac595a"
          },
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.test_igw",
            "module.vpc_module.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:vpc/vpc-0563a4c24ccac595a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/27",
            "default_network_acl_id": "acl-06b1a22b3b3abb703",
            "default_route_table_id": "rtb-0d39e96e611a63410",
            "default_security_group_id": "sg-093bbf9d7c39f378f",
            "dhcp_options_id": "dopt-07f08856e16649025",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0563a4c24ccac595a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d39e96e611a63410",
            "owner_id": "992382822158",
            "tags": {
              "Name": "mukesh-vpc"
            },
            "tags_all": {
              "Name": "mukesh-vpc"
            }
          }
        }
      ]
    }
  ]
}